# School_Management_CPP

./: CMakeLists.txt  README.md  Student.cpp  Student.h  StudentController.cpp  StudentController.h  SubjectController.cpp  SubjectController.h  SubjectData.cpp  SubjectData.h  SubjectDefinition.cpp  SubjectDefinition.h  main.cpp
